D120 (D119 S4 design): JVM structured concurrency via non-preview virtual-thread ExecutorService
Design/approach decision for D119 slice S4 (JVM real structured
concurrency), the "design before implementing" step this repo uses (as
D-N-019 did for native async).

Established, verified against the code and JDK 21:
- StructuredTaskScope (the docs/18 §15 spec, and the unwired lowerScopeBlock
  in lowering.l) is a PREVIEW API on the baseline JDK 21 — needs
  --enable-preview + a preview class-file marker the JVM pipeline lacks, and
  the ShutdownOnFailure form was already removed by JDK 24.
- lowerScopeBlock is unwired, never executed (self_test_b120 builds but does
  not run it), MethodAssembler-level (mismatched with codegen's LInsn IR),
  and assumes no-arg Callables (incompatible with capturing spawns).
- A non-preview substrate is FINAL in JDK 21: virtual-thread-per-task
  ExecutorService (AutoCloseable). Smoke-tested end-to-end: two 200ms tasks
  finish concurrently in ~220ms; a throwing task surfaces via
  ExecutionException.

Decision: lower scope/spawn/await onto the ExecutorService substrate —
scope { } → try-with-resources newVirtualThreadPerTaskExecutor(); spawn e →
exec.submit(Callable-closure); await → Future.get() (unwrap
ExecutionException). Delivers §7.4's core guarantees today (no leaks, real
concurrency, first-failure propagation). Sibling-cancel + aggregation are
the tracked JDK-25 StructuredTaskScope follow-up (D-N-021's staging model).

- docs/03: add D120.
- docs/18 §15: rewrite to the shipped ExecutorService lowering, retaining
  the StructuredTaskScope shape as the target end-state.
- book/ch10 §10.3: correct the JVM status note.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GCNb4zDerVEEu31dP4fbMy